Added Mailchimp, favicon, og data and footer with links.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!doctype html>
 <html>
   <head>
+    <title>Spacebar >> Moneyshot</title>
+    <meta property="og:title" content="Spacebar >> Moneyshot"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://spacebartomoneyshot.com"/>
+    <meta property="og:image" content="http://spacebartomoneyshot.com/img/og-logo.png"/>
+    <meta property="og:site_name" content="Spacebar >> Moneyshot"/>
+    <meta property="fb:admins" content="10150176510130579"/>
+    <meta property="og:description"
+          content="A LOT of people watch porn, whether or not they admit it. But how do you avoid that awkward moment when you are about to approach your 'aha' moment and the video suddenly cuts to an unfortunate scene... Spacebar to Moneyshot is here to help. With whatever appendage is available you can just hit spacebar and go immediately to the perfect 'aha' scene. Wonderful."/>
+
+    <meta name="description" content="A LOT of people watch porn, whether or not they admit it. But how do you avoid that awkward moment when you are about to approach your 'aha' moment and the video suddenly cuts to an unfortunate scene... Spacebar to Moneyshot is here to help. With whatever appendage is available you can just hit spacebar and go immediately to the perfect 'aha' scene. Wonderful." />
+    <meta name="keywords" content="Chrome Extension, spacebar porn, hacker league, 48hourapps, Jarod Reyes, Abe Stanway, NYCTechMeetup, NYC Tech, Funny Startups, Comedy Hackday, #comedyhackday, @jreyesdesign, @abestanway" />
+
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cabin:500,500italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" media="all" href="reset.css" />
@@ -30,8 +44,8 @@
   </head>
   <body>
     <div class="header">
-      <img src="img/logo.png" />
-      <i>No more waiting, no more unfortunate O-moments...</i>
+      <img src="img/logo2.png" />
+      <i>No more waiting, no more unfortunate Aha-moments...</i>
       <a href="#" class="btn">Get the Chrome Extension</a>
       <div class="clear"></div>
     </div>
@@ -53,9 +67,38 @@
       </div>
       <div class="clear"></div>
       <hr class="soften" />
+      <!-- Begin MailChimp Signup Form -->
+      <div id="mc_embed_signup">
+        <form action="http://joysti.us2.list-manage.com/subscribe/post?u=3e3392ea826ef7503b3204b08&amp;id=f4ddea32b6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <h2>Subscribe to our mailing list</h2>
+        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+        <div class="mc-field-group">
+          <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+        </label>
+          <input type="email" value="" class="text" name="EMAIL" class="required email" id="mce-EMAIL">
+        </div>
+        <div class="mc-field-group input-group">
+            <ul><li><input type="checkbox" value="1" name="group[10749][1]" id="mce-group[10749]-10749-0"><label for="mce-group[10749]-10749-0">I verify I am 18 or older</label></li>
+        </ul>
+        </div>
+          <div id="mce-responses">
+            <div class="response" id="mce-error-response" style="display:none"></div>
+            <div class="response" id="mce-success-response" style="display:none"></div>
+          </div> 
+          <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn">
+          <div class="clear"></div>
+        </form>
+      </div>
+
+<!--End mc_embed_signup-->
+      <hr class="soften" />
       <h2 class="grid_6">ARE YOU A PORN PROVIDER?</h2>
       <a href="#" class="btn grid_4">Integrate with us ></a>
       <div class="clear"></div>
+    </div>
+    <hr class="soften" />
+    <div class="footer">
+      Built for <a href="http://twitter.com/#!/search/%23comedyhackday">#comedyhackday</a> by <a href="http://twitter.com/jreyesdesign">Jarod Reyes</a> and <a href="http://twitter.com/abestanway">Abe Stanway</a>. Copyright 2012. contact: <a href="mailto:contact@spacebartomoneyshot.com">Email</a>
     </div>
     
   </body>
