Added signup beta to extension button.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="header">
       <img src="img/logo2.png" />
       <i>No more waiting, no more unfortunate Aha-moments...</i>
-      <a href="#" class="btn">Get the Chrome Extension</a>
+      <a href="http://eepurl.com/pjpzL" target="_blank" class="btn">Get the Chrome Extension</a>
       <div class="clear"></div>
     </div>
     <div class="container_12">
