Added signup beta to extension button.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
     <hr class="soften" />
     <div class="footer">
-      Built for <a href="http://twitter.com/#!/search/%23comedyhackday">#comedyhackday</a> by <a href="http://twitter.com/jreyesdesign">Jarod Reyes</a> and <a href="http://twitter.com/abestanway">Abe Stanway</a>. Copyright 2012. contact: <a href="mailto:contact@spacebartomoneyshot.com">Email</a>
+      Built for <a href="http://twitter.com/#!/search/%23comedyhackday" target="blank">#comedyhackday</a> by <a href="http://twitter.com/jreyesdesign">Jarod Reyes</a> and <a href="http://twitter.com/abestanway" target="blank">Abe Stanway</a>. Copyright 2012. contact: <a href="mailto:contact@spacebartomoneyshot.com" target="blank">Email</a>
     </div>
     
   </body>
