--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" type="text/css" media="all" href="reset.css" />
     <link rel="stylesheet" type="text/css" media="all" href="styles.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-    <script src="popcorn.js"></script>
-    <script src="mousetrap.js"></script>
+    <script src="extension/popcorn.js"></script>
+    <script src="extension/mousetrap.js"></script>
 
     <script>
       // ensure the web page (DOM) has loaded
