--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cabin:500,500italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" media="all" href="reset.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="styles.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="css/styles.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script src="extension/popcorn.js"></script>
     <script src="extension/mousetrap.js"></script>
